@@ -37,6 +37,9 @@ core 2.2.1 - not released yet
 	* Added: TodoyuForm->addOnDisplayJsCallback() to call a js callback when form is displayed
 	* Added: TodoyuArray::implode() and ::explode()
 	* Added: TodoyuForm->getFieldData() to get a single field value from formdata
+	* Added: TodoyuFormElement_Select->setNoPleaseSelect()
+	* Added: TodoyuArray::prefixKeys()
+	* Changed: Renamed TodoyuArray::prefix() to prefixValues()
 	* Changed: Removed $parseConstants from TodoyuArray::intExplode(). Was not used and supported. Added $limi parameter as for trimExplode()
 	* Changed: Use js version instead of php the check for the first input in form
 	* Changed: Update form XSD validation to match know field types only
